fixinf alignment of p tags

--- a/styleSheets/resume.css
+++ b/styleSheets/resume.css
@@ -4,7 +4,7 @@ html, body {
 	overflow: hidden;
 }
 
-html, body, p {
+html, body {
 	margin: 0;
 	padding: 0;
   font-family: "Work Sans", sans-serif;
